--- a/index.html
+++ b/index.html
@@ -71,21 +71,23 @@
 			</section>
 			<section class="sobre container">
                 <div class="sobre__conteudo">
-                    <h2 class="sobre__titulo">Sobre</h2>
-                    <p class="sobre__texto">Criamos aplicativos personalizados para <strong class="sobre__texto--destaque">todas as pessoas</strong>!</p>
-                    <p class="sobre__texto">
-                        A manutenção de um aplicativo não pode ser um custo extra para o cliente, Na Apeperia você assina nosso serviço e a manutenção já está inclusa. Assim, você não se preocupa com manutenção, é tudo por nossa conta.
-                    </p>
-                    <p class="sobre__texto sobre__texto--destaque sobre__texto--divisao">
-                        Conte com uma equipe especializada e exclusiva pra projetos incríveis em qualquer plataforma.
-                    </p>
-                    <ul class="sobre__plataformas">
-                        <li><img src="img/android.png" alt="Ícone do Android"></li>
-                        <li><img src="img/blackberry.png" alt="Ícone da Blackberry"></li>
-                        <li><img src="img/apple.png" alt="Ícone da Apple"></li>
-                        <li><img src="img/windowsphone.png" alt="Ícone da Microsoft"></li>
-                    </ul>
-                    <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
+                    <div class="sobre__conteudo">
+                        <h2 class="sobre__titulo">Sobre</h2>
+                        <p class="sobre__texto">Criamos aplicativos personalizados para <strong class="sobre__texto--destaque">todas as pessoas</strong>!</p>
+                        <p class="sobre__texto">
+                            A manutenção de um aplicativo não pode ser um custo extra para o cliente, Na Apeperia você assina nosso serviço e a manutenção já está inclusa. Assim, você não se preocupa com manutenção, é tudo por nossa conta.
+                        </p>
+                        <p class="sobre__texto sobre__texto--destaque sobre__texto--divisao">
+                            Conte com uma equipe especializada e exclusiva pra projetos incríveis em qualquer plataforma.
+                        </p>
+                        <ul class="sobre__plataformas">
+                            <li><img src="img/android.png" alt="Ícone do Android"></li>
+                            <li><img src="img/blackberry.png" alt="Ícone da Blackberry"></li>
+                            <li><img src="img/apple.png" alt="Ícone da Apple"></li>
+                            <li><img src="img/windowsphone.png" alt="Ícone da Microsoft"></li>
+                        </ul>
+                        <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
+                    </div>
                 </div>
                 <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
             </section>
@@ -147,5 +149,23 @@
 				<video controls class="institucional__video" src="img/formacao-java.mp4"></video>
 			</section>
 		</main>
+        <footer class="rodape container">
+            <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="rodape__logo">
+            <ul class="rodape__social">
+                <li><a title="Facebook" href="#" class="rodape__midia"><img src="img/facebook.png" alt="Ícone do Facebook"></a></li>
+                <li><a title="Twitter" href="#" class="rodape__midia"><img src="img/twitter.png" alt="Ícone do Twitter"></a></li>
+                <li><a title="Instagram" href="#" class="rodape__midia"><img src="img/instagram.png" alt="Ícone do Instagram"></a></li>
+            </ul>
+            <nav>
+                <ul class="rodape__navegacao">
+                    <li class="rodape__link"><a href="#">Sobre</a></li>
+                    <li class="rodape__link"><a href="#">Planos</a></li>
+                    <li class="rodape__link"><a href="#">Blog</a></li>
+                    <li class="rodape__link"><a href="#">Destaques</a></li>
+                    <li class="rodape__link"><a href="#">Institucional</a></li>
+                    <li class="rodape__link"><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </footer>
 </body>
 </html>
