Conclusão do Curso da Alura
Últimos ajustes realizados no Rodapé e no campo Institucional do site.

--- a/index.html
+++ b/index.html
@@ -134,38 +134,42 @@
             </section>
 			<section class="institucional container">
 				<h2 class="institucional__titulo">Institucional</h2>
-				<p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
-				<address class="institucional__endereco">
-					Rua Vergueiro, 3185<br>
-					Vila Mariana, São Paulo
-					<article class="institucional__contato">
-						<p>
-							<a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a>
-							ou
-							<a href="mailto:contato@apeperia.com" class="institucional__contato-email">contato@apeperia.com</a>
-						</p>
-					</article>
-				</address>
-				<video controls class="institucional__video" src="img/formacao-java.mp4"></video>
+				<div class="institucional__conteudo">
+                    <div class="institucional__informacoes">
+                        <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                        <address class="institucional__endereco">
+                            Rua Vergueiro, 3185<br>
+                            Vila Mariana, São Paulo
+                            <article class="institucional__contato">
+                                <p>
+                                    <a href="tel:+551155712751" class="institucional__contato-telefone">(11) 5571-2751</a>
+                                    ou
+                                    <a href="mailto:contato@apeperia.com" class="institucional__contato-email">contato@apeperia.com</a>
+                                </p>
+                            </article>
+                        </address>
+                    </div>
+                    <video controls class="institucional__video" src="img/formacao-java.mp4"></video>
+                </div>
 			</section>
 		</main>
         <footer class="rodape container">
-            <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="rodape__logo">
-            <ul class="rodape__social">
-                <li><a title="Facebook" href="#" class="rodape__midia"><img src="img/facebook.png" alt="Ícone do Facebook"></a></li>
-                <li><a title="Twitter" href="#" class="rodape__midia"><img src="img/twitter.png" alt="Ícone do Twitter"></a></li>
-                <li><a title="Instagram" href="#" class="rodape__midia"><img src="img/instagram.png" alt="Ícone do Instagram"></a></li>
-            </ul>
-            <nav>
-                <ul class="rodape__navegacao">
-                    <li class="rodape__link"><a href="#">Sobre</a></li>
-                    <li class="rodape__link"><a href="#">Planos</a></li>
-                    <li class="rodape__link"><a href="#">Blog</a></li>
-                    <li class="rodape__link"><a href="#">Destaques</a></li>
-                    <li class="rodape__link"><a href="#">Institucional</a></li>
-                    <li class="rodape__link"><a href="#">Contato</a></li>
+                <img src="img/logo-apeperia.svg" alt="Logo da Apeperia" class="rodape__logo">
+                <ul class="rodape__social">
+                    <li><a title="Facebook" href="#" class="rodape__midia"><img src="img/facebook.png" alt="Ícone do Facebook"></a></li>
+                    <li><a title="Twitter" href="#" class="rodape__midia"><img src="img/twitter.png" alt="Ícone do Twitter"></a></li>
+                    <li><a title="Instagram" href="#" class="rodape__midia"><img src="img/instagram.png" alt="Ícone do Instagram"></a></li>
                 </ul>
-            </nav>
+                <nav>
+                    <ul class="rodape__navegacao">
+                        <li class="rodape__link"><a href="#">Sobre</a></li>
+                        <li class="rodape__link"><a href="#">Planos</a></li>
+                        <li class="rodape__link"><a href="#">Blog</a></li>
+                        <li class="rodape__link"><a href="#">Destaques</a></li>
+                        <li class="rodape__link"><a href="#">Institucional</a></li>
+                        <li class="rodape__link"><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
         </footer>
 </body>
 </html>
